<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="80dp"
        app:srcCompat="@drawable/ic_baseline_username_login" />

    <Button
        android:id="@+id/buttonLoginOnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="438dp"
        android:layout_marginEnd="20dp"
        android:height="53dp"
        android:backgroundTint="@color/TrueTone"
        android:text="@string/loginB"
        android:textColor="#000000"

        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_131sdp"
        android:layout_height="@dimen/_53sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_105sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_95sdp"
        android:text="@string/loginS"
        android:textColor="@color/TrueTone"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="36dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />


    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="36dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="0dp"

        app:srcCompat="@drawable/ic_baseline_password_login" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="113dp"
        android:layout_height="73dp"
        android:layout_below="@+id/buttonLoginOnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="-132dp"
        android:layout_marginEnd="154dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/regOnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLoginOnLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="144dp"
        android:text="@string/RegisterDone"
        android:textColor="@color/TrueTone"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetText"
        android:layout_width="@dimen/_176sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regOnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:text="Forget Password ?"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>