<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:paddingBottom="@dimen/_16sdp"
    tools:context=".MainActivity2">


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_72sdp"
        android:layout_marginTop="@dimen/_345sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:backgroundTint="@color/TrueTone"
        android:text="@string/RegisterDone"
        android:textColor="#000000"

        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="183sp"
        android:layout_height="@dimen/_58sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_77sdp"
        android:layout_marginTop="@dimen/_76sdp"
        android:layout_marginEnd="107dp"
        android:text="@string/RegisterDone"
        android:textColor="@color/TrueTone"
        android:textSize="@dimen/_32sdp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_57sdp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/editTextTextPersonName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="@color/white" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/editTextTextPassword2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTextPersonName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_baseline_username_login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTextPassword2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginBottom="-1dp"
        app:srcCompat="@drawable/ic_baseline_password_login" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_113sdp"
        android:layout_height="@dimen/_73sdp"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_159sdp"
        android:layout_marginTop="@dimen/_132sdp"
        android:layout_marginEnd="@dimen/_154sdp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/loginOnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_120sdp"
        android:text="Login"
        android:textColor="@color/TrueTone"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>

